--- a/HamroNotes/index.html
+++ b/HamroNotes/index.html
@@ -48,7 +48,7 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#how">How it works</a></li>
-          <li><a class="main-nav-link" href="#meals">Meals</a></li>
+          <li><a class="main-nav-link" href="#about">About</a></li>
           <li>
             <a class="main-nav-link" href="#categories">Categories</a>
           </li>
