--- a/HamroNotes/index.html
+++ b/HamroNotes/index.html
@@ -645,7 +645,7 @@
     <div class="container">
       <p class="copyright">
         © Copyright 2022 | HamroNotes | All Rights Reserved by
-        codewithsadee
+        HamroNotes
       </p>
     </div>
   </div>
